[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]", "example-robot-data[build]", "scipy"]

[project]
dependencies = ["example-robot-data"]
description = "A fast and flexible implementation of Rigid Body Dynamics algorithms and their analytical derivatives"
license = "BSD-3-Clause"
name = "crocoddyl"
version = "1.9.0.2"

[project.urls]
homepage = "https://github.com/loco-3d/crocoddyl"

[tool.cmeel]
build-number = 1

[tool.isort]
profile = "black"

[tool.ruff]
extend-exclude = ["cmake", "examples/notebooks"]
extend-select = ["RUF", "UP"]
target-version = "py38"

[tool.tomlsort]
all = true
