[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]", "example-robot-data[build]", "scipy"]

[project]
dependencies = ["example-robot-data"]
description = "A fast and flexible implementation of Rigid Body Dynamics algorithms and their analytical derivatives"
license = "BSD-3-Clause"
name = "crocoddyl"
version = "2.0.0"

[project.urls]
homepage = "https://github.com/loco-3d/crocoddyl"

[tool.isort]
profile = "black"

[tool.ruff]
extend-exclude = ["cmake", "examples/notebooks"]
extend-select = ["RUF", "UP"]
target-version = "py38"

[tool.tomlsort]
all = true
