[build-system]
build-backend = "cmeel"
requires = ["cmeel[build]", "example-robot-data[build]", "scipy"]

[project]
dependencies = ["example-robot-data"]
description = "A fast and flexible implementation of Rigid Body Dynamics algorithms and their analytical derivatives"
license = "BSD-3-Clause"
name = "crocoddyl"
version = "2.0.1"

[project.urls]
homepage = "https://github.com/cmake-wheel/crocoddyl"
upstream = "https://github.com/loco-3d/crocoddyl"

[tool.cmeel]
build-number = 1

[tool.isort]
known_first_party = ["crocoddyl"]
profile = "black"

[tool.tomlsort]
all = true
